--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-auth0.audience=api://chashka
+auth0.audience=https://chashka.com
 auth0.domain=coach.eu.auth0.com
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
